Fix box alignment

--- a/web/public/css/style.scss
+++ b/web/public/css/style.scss
@@ -514,3 +514,7 @@ h2.supertitle {
     margin-bottom: 0.4rem;
   }
 }
+
+p.select-university {
+  margin: 0.85rem 0;
+}
